# Learning-Management-System-Fullstack

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  workflow.yml
LMS-Backend/: .env.example  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
LMS-Backend/LMSBackend/: asgi.py  settings.py  urls.py  wsgi.py
LMS-Backend/core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
LMS-Backend/core/management/commands/: seed_sample_data.py
LMS-Backend/tests/: conftest.py  test_core_views_contract.py  test_runtime_basics.py
LMS-Frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json  tsconfig.json
LMS-Frontend/app/: README.md  angular.json  jest.config.js  jest.setup.js  package-lock.json  package.json
LMS-Frontend/app/__tests__/: auth-interceptor.spec.js  course-service.spec.js  enrollment-service.spec.js  lesson-service.spec.js  shared-angular-mocks.js  user-service.spec.js
LMS-Frontend/app/src/: index.html  main.ts  manifest.json  styles.css
LMS-Frontend/src/: index.html
aws/: README.md
aws/scripts/: deploy.sh  destroy.sh  rollback.sh  verify.sh
kubernetes/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars  production.tfvars
(+272 files in other folders)
